# lcm

./: .dockerignore  .gitignore  BUILDING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: launch.json
crates/lcm-cli/: Cargo.toml
crates/lcm-cli/src/: main.rs
crates/lcm-core/: Cargo.toml
crates/lcm-core/src/: bundle.rs  cert.rs  distro.rs  error.rs  exec.rs  identity.rs  lib.rs  nss.rs  osrelease.rs  pkcs12.rs  plan.rs  service.rs  skb.rs  trust.rs  util.rs
crates/lcm-core/src/backend/: mod.rs
gui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: global.d.ts  hooks.ts  main.tsx  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/polkit/: org.lcm.helper.policy
gui/src-tauri/src/: main.rs
gui/src/api/: client.ts  mock.ts  tauri.ts  types-internal.ts
gui/src/components/: ErrorBoundary.tsx  Layout.tsx  Toast.tsx  icons.tsx  ui.tsx
gui/src/pages/: Audit.tsx  ClientIds.tsx  Overview.tsx  ServerCerts.tsx  Trust.tsx
scripts/: make-test-ca.sh  set-version.sh
