[package]
name = "lcm-core"
description = "Core library for LCM (Linux Cert Manager): distro detection, trust-store backends, certificate parsing, and privileged operation plans."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
x509-parser.workspace = true
pem.workspace = true
sha2.workspace = true
base64.workspace = true
scrypt.workspace = true
aes-gcm.workspace = true
