[package]
name = "lcm-gui"
description = "Desktop GUI for LCM (Linux Cert Manager) — Tauri shell over lcm-core."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.77"

[[bin]]
name = "lcm-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
lcm-core = { path = "../../crates/lcm-core" }
